# hwvar

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cmake-config.h.in  configure.ac
cmake/: FindHWLOC.cmake
include/: arch.h  barrier.h  mckernel.h  platform.h  worker.h
scripts/: BlueGeneQ-build.sh
src/: CMakeLists.txt  Makefile.am  barrier.c  hwloc  main.c  main.cc  pmcs.h  runner.cc  runner.h  streambuffer.cc  streambuffer.h  worker.c  worker.cc
src/3rd/: CMakeLists.txt
src/arch/: Makefile.am  aarch64.c  aarch64.h  arch.h  bgq.h  lookup.h  ppc.h  sparc.h  x86_64.c  x86_64.h  x86_64_lookup.h
src/benchmarks/: CMakeLists.txt  HACCmk.c  HACCmk.h  Makefile.am  benchmark.c  benchmark.h  capacity.c++  capacity.cpp  capacity.h  dgemm.c  dgemm.h  fwq.c  fwq.h  hpccg.c++  hpccg.h  ipi.cc  ipi.h  minife.c++  minife.h  sha256.c  sha256.h  stream.c  stream.h  syscall.c  syscall.h
